--- a/sdp02/package.json
+++ b/sdp02/package.json
@@ -28,6 +28,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.3",
+    "react-resizable-panels": "^2.0.18",
+    "react-router-dom": "^6.23.0",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
