--- a/sdp02/package.json
+++ b/sdp02/package.json
@@ -26,6 +26,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
+    "jspdf": "^2.5.1",
+    "jspdf-invoice-template-nodejs": "^1.4.30",
     "lucide-react": "^0.368.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
