--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^1.0.0",
     "date-fns": "^3.6.0",
+    "formik": "^2.4.6",
     "jspdf": "^2.5.1",
     "jspdf-invoice-template-nodejs": "^1.4.30",
     "lucide-react": "^0.368.0",
@@ -42,6 +43,7 @@
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.0",
+    "yup": "^1.4.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
