--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "formik": "^2.4.6",
     "jspdf": "^2.5.1",
     "jspdf-invoice-template-nodejs": "^1.4.30",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.368.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
