--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-query": "^5.32.1",
     "@tanstack/react-table": "^8.16.0",
     "@types/axios": "^0.14.0",
@@ -30,6 +31,7 @@
     "date-fns": "^3.6.0",
     "jspdf": "^2.5.1",
     "jspdf-invoice-template-nodejs": "^1.4.30",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.368.0",
     "next": "14.1.4",
     "next-themes": "^0.3.0",
